# EverythingEverywhereAllAtOnce

./: .env.example  .gitignore  CLOUD.md  README.md  RUNNING.md  browser_use_open_api.json  index.html  package-lock.json  package.json  server.js
backend/: pyproject.toml  requirements.txt  seed_demo.py
backend/app/: config.py  main.py
backend/app/agents/: __init__.py  base.py  github_agent.py  goodreads_agent.py  google_agent.py  history_agent.py  youtube_agent.py
backend/app/agents/schemas/: github.py  goodreads.py  google.py  history.py  youtube.py
backend/app/api/: analysis.py  auth.py  connections.py  cookies.py  deps.py  explore.py  history.py  router.py  verses.py  video.py
backend/app/models/: __init__.py  analysis.py  collected_data.py  connection.py  user.py
backend/app/schemas/: analysis.py  auth.py  connections.py  cookies.py
backend/app/services/: analysis_service.py  collection_service.py
backend/app/utils/: encryption.py  security.py
extension/: manifest.json  package-lock.json  package.json  tsconfig.json  webpack.config.js
extension/src/background/: service-worker.ts
extension/src/lib/: api.ts  auth.ts  constants.ts  cookie-extractor.ts  history-extractor.ts
extension/src/popup/: popup.html  popup.ts
frontend/: explore.css  explore.html  explore.js  index.css  index.html  index.js  map.html  onboard.css  onboard.html  onboard.js  package-lock.json  package.json  particles.js  serve.py  server.js  shared.css
frontend/src/app/: layout.tsx  page.tsx
frontend/src/app/dashboard/: page.tsx
frontend/src/lib/: api.ts
(+3 files in other folders)
