[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.13"
dependencies = [
    "anthropic>=0.40.0",
    "aiosqlite>=0.22.1",
    "browser-use-sdk>=3.1.0",
    "cryptography>=46.0.5",
    "fastapi>=0.134.0",
    "passlib[bcrypt]>=1.7.4",
    "playwright>=1.58.0",
    "pydantic>=2.12.5",
    "pydantic-settings>=2.13.1",
    "python-dotenv>=1.2.1",
    "python-jose[cryptography]>=3.5.0",
    "python-multipart>=0.0.22",
    "sqlalchemy[asyncio]>=2.0.47",
    "uvicorn[standard]>=0.41.0",
]
